(feat): adiciona criação de media ponderada por coluna
