# api/app/swagger/swagger.yaml
@@ -3797,3 +3797,88 @@ paths:
                         "Coluna 3": 42.0
                         }
                     }
+
+  /data-visualization/weighted-average/{id}:
+    post:
+      tags:
+        - "Visualização de Dados"
+      summary: "Realiza o cálculo da média ponderada"
+      description: |
+        Realiza o cálculo da média ponderada em um dataset específico. O usuário pode escolher entre usar o dataset original ou o dataset limpo (se disponível).
+        A média ponderada é calculada para as colunas (features) especificadas.
+      parameters:
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "integer"
+          description: "ID da base de dados."
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - features
+                - weights
+                - use_clean_dataset
+              properties:
+                features:
+                  type: array
+                  items:
+                    type: string
+                  description: "Lista de colunas (features) para as quais a média ponderada será calculada."
+                weights:
+                  type: array
+                  items:
+                    type: number
+                  description: "Lista de pesos correspondentes às colunas especificadas."
+                use_clean_dataset:
+                  type: boolean
+                  description: |
+                    Indica se o dataset limpo deve ser usado. 
+                    - `true`: Usa o dataset limpo (se disponível).
+                    - `false`: Usa o dataset original.
+            examples:
+              success:
+                summary: Exemplo de requisição
+                value:
+                  {
+                    "features": [ "Coluna 1", "Coluna 2" ],
+                    "weights": [ 0.6, 0.4 ],
+                    "use_clean_dataset": true
+                  }
+      responses:
+        '200':
+          description: Cálculo de média ponderada realizado com sucesso
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: "Mensagem de retorno da operação."
+                  success:
+                    type: boolean
+                    description: "Indica se a operação foi bem-sucedida."
+                  data:
+                    type: object
+                    additionalProperties:
+                      type: number
+                      description: "Valor da média ponderada para cada feature."
+              examples:
+                success:
+                  summary: "Exemplo de resposta"
+                  description: "Cálculo de média ponderada realizado com sucesso"
+                  value:
+                    {
+                      "message": "Cálculo de média ponderada realizado com sucesso!",
+                      "success": true,
+                        "data": {
+                          "Coluna 1": 15.5,
+                          "Coluna 2": 25.0,
+                          "Coluna 3": 42.0
+                        }
+                    }
